--- a/Demo_MVC/Demo_MVC.csproj
+++ b/Demo_MVC/Demo_MVC.csproj
@@ -214,6 +214,7 @@
     <Content Include="Views\Users\Details.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Home\bae.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
